--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js Example with Modules</title>
-    <!-- Определение import map для подключения Three.js и его модулей -->
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
-        }
-      }
-    </script>
-  </head>
-  <body>
-    <canvas class="canvas"></canvas>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Курс three.js</title>
+    </head>
+    <body>
+        <canvas class="canvas"></canvas>
+    </body>
 </html>
